--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "expressweb",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "node": "v14.17.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "node src/app.js"
